Java 8 Config Adjustments + Import Cleanups